--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>
 </head>
 <body>
-<div id="app">{{ message }}</div>
+<div id="app" class="form-container container">
+    <form>
+        <div class="form-group">
+            <label for="appName">名前</label>
+            <div class="form-row">
+                <div class="col">
+                    <input v-model="form.appName" id="appName" type="text" class="form-control">
+                </div>
+            </div>
+        </div>
+    </form>
+    {{ form.appName }}
+</div>
 <script src="lib/main.js"></script>
 </body>
 </html>
