--- a/index.html
+++ b/index.html
@@ -12,12 +12,10 @@
 <body>
 <div id="app" class="form-container container">
     <form>
-        <div class="form-group">
-            <label for="appName">名前</label>
-            <div class="form-row">
-                <div class="col">
-                    <input v-model="form.appName" id="appName" type="text" class="form-control">
-                </div>
+        <div class="form-group row">
+            <label for="appName" class="col-form-label col-sm-2">名前</label>
+            <div class="col-sm-10">
+                <input v-model="form.appName" id="appName" type="text" class="form-control">
             </div>
         </div>
     </form>
