change data property.

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <div class="form-group row">
             <label for="appName" class="col-form-label col-sm-2">名前</label>
             <div class="col-sm-10">
-                <input v-model="form.appName" id="appName" type="text" class="form-control">
+                <input v-model="appName" id="appName" type="text" class="form-control">
             </div>
         </div>
     </form>
-    {{ form.appName }}
+    {{ appName }}
 </div>
 <script src="lib/main.js"></script>
 </body>
